@@ -102,7 +102,7 @@ Guillermo Aldama-Bustos  (@aldabus)             August 2025
 Myles Turner             (@mylesturner99)       August 2025
 Ji Kun                   (@JIKUN1990)           November 2025
 Maoxin Wang              (@MaoxinWang)          December 2025
-Antonio Scala            (@antonio-scala)       December 2025
+Antonio Scala            (@antonio-scala)       January 2026
 
 Project management
 ------------------
