@@ -1,5 +1,16 @@
   [Antonio Scala]
-  * Added Scala et al (2025) GMM
+  * Added Scala et al (2025) GMM 
+  
+  [Michele Simionato]
+  * Show the GSIM class warnings only once
+  * Extended `oq engine --lhc` and `oq engine --lrc` to show the
+    calculation_mode
+
+  [Christopher Brooks]
+  * Refactored conditional GMPEs to be specifiable within ModifiableGMPE
+    on a per-IMT basis (safer handling, more flexibility).
+  * Added documentation for the implementation of conditional GMPEs within
+    the OpenQuake Engine.
 
   [Michele Simionato]
   * Added a consistency check on the effective time when starting from SES
